--- a/FacadePlatform/src/main/resources/static/css/common.css
+++ b/FacadePlatform/src/main/resources/static/css/common.css
@@ -7,14 +7,25 @@ html,body{
 body.bg1 {
     background:url("../img/bg.jpg") no-repeat;
 }
+
+body.login-bg{
+    background: url("../img/login.jpeg") no-repeat;
+}
+
 @media (min-width: 768px){
     body.bg1 {
         background:url("../img/bg.jpg") no-repeat;
+    }
+    body.login-bg{
+        background: url("../img/login.jpeg") no-repeat;
     }
 }
 @media (min-width: 992px){
     body.bg1 {
         background:url("../img/bg.jpg") no-repeat;
+    }
+    body.login-bg{
+        background: url("../img/login.jpeg") no-repeat;
     }
 }
 @media (min-width: 1200px){
@@ -22,6 +33,12 @@ body.bg1 {
         width:100%;
         height:auto;
         background:url("../img/bg.jpg") no-repeat;
+        background-size: 100%;
+    }
+    body.login-bg{
+        width:100%;
+        height:auto;
+        background: url("../img/login.jpeg") no-repeat;
         background-size: 100%;
     }
 }
