--- a/FacadePlatform/src/main/resources/templates/login.html
+++ b/FacadePlatform/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.min.css"/>
     <!-- adminLTE -->
-    <link rel="stylesheet" href="/static/plugins/adminLTE/dist/css/AdminLTE.min.css"/>
+    <link rel="stylesheet" href="/static/plugins/adminlte/dist/css/AdminLTE.min.css"/>
     <!-- iCheck -->
     <link rel="stylesheet" href="/static/plugins/iCheck/square/blue.css"/>
     <!-- toastr -->
@@ -72,6 +72,8 @@
 <script src="/static/plugins/jQuery/jquery-2.2.3.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
 <script src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
+<!-- AdminLTE-->
+<script src="/static/plugins/adminlte/dist/js/adminlte.min.js"></script>
 <!-- iCheck -->
 <script src="/static/plugins/iCheck/icheck.min.js"></script>
 <!-- toastr -->
