--- a/FacadePlatform/src/main/resources/templates/autodrive.html
+++ b/FacadePlatform/src/main/resources/templates/autodrive.html
@@ -72,7 +72,7 @@
         </div>
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="active treeview menu-open">
+            <li class="treeview">
                 <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     <span class="pull-right-container">
@@ -80,7 +80,7 @@
                     </span>
                 </a>
                 <ul class="treeview-menu" style="">
-                    <li class="active"><a href="/"><i class="fa fa-circle-o"></i> Dashboard</a></li>
+                    <li><a href="/"><i class="fa fa-circle-o"></i> Dashboard</a></li>
                 </ul>
             </li>
             <li class="treeview">
@@ -94,7 +94,7 @@
                     <li><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>
                 </ul>
             </li>
-            <li class="treeview">
+            <li class="active treeview menu-open">
                 <a href="#">
                     <i class="fa fa-bullseye"></i>
                     <span>蜕变测试</span>
@@ -103,7 +103,7 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>
+                    <li class="active"><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>
                 </ul>
             </li>
         </ul>
