--- a/FacadePlatform/src/main/resources/templates/login.html
+++ b/FacadePlatform/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 
         <form id="loginform">
             <div class="form-group has-feedback">
-                <input id="userid" name="username" type="text" class="form-control" placeholder="Username"/>
+                <input id="userid" name="username" type="text" class="form-control" placeholder="Username / Mail"/>
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
