--- a/FacadePlatform/src/main/resources/templates/home.html
+++ b/FacadePlatform/src/main/resources/templates/home.html
@@ -1,112 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>AI测试平台</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-    <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.min.css"/>
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="/static/plugins/fontawesome/css/font-awesome.min.css"/>
-    <!-- iCheck -->
-    <link rel="stylesheet" href="/static/plugins/iCheck/square/blue.css"/>
-    <!-- toastr -->
-    <link rel="stylesheet" href="/static/plugins/toastr/toastr.min.css"/>
-    <!-- adminLTE -->
-    <link rel="stylesheet" href="/static/plugins/adminlte/dist/css/AdminLTE.min.css"/>
-    <link rel="stylesheet" href="/static/plugins/adminlte/dist/css/skins/skin-black.min.css"/>
-    <!-- Common Css -->
-    <link rel="stylesheet" href="/static/css/common.css"/>
+    <meta th:include="header::header"/>
+    <title>深度学习测试平台</title>
 </head>
 <body class="hold-transition skin-black sidebar-mini">
-<header class="main-header">
-    <a href="/" class="logo">
-        <!-- 缩小侧边栏后图标 -->
-        <span class="logo-mini">Ai</span>
-        <!-- 正常宽度标题、图标 -->
-        <span class="logo-lg"><b></b>AiPlatform</span>
-    </a>
-    <nav class="navbar navbar-static-top">
-        <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-            <span class="sr-only">Toggle Navigation</span>
-        </a>
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
-                        <span class="hidden-xs" th:text="${user != null ? user.username : 'Administrator'}"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="user-header">
-                            <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-                            <p>
-                                Administrator
-                            </p>
-                        </li>
-                        <li class="user-footer">
-                            <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">修改信息</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="/logout" class="btn btn-default btn-flat">用户登出</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<header class="main-header" th:include="header::main-header (${user})">
+
 </header>
 <div class="content-wrapper" style="min-height: 976px">
-    <aside class="main-sidebar">
-        <div class="user-panel">
-            <div class="pull-left image">
-                <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-            </div>
-            <div class="pull-left info">
-                <p>Administrator</p>
-            </div>
-        </div>
-        <ul class="sidebar-menu" data-widget="tree">
-            <li class="header">MAIN NAVIGATION</li>
-            <li class="active treeview menu-open">
-                <a href="#">
-                    <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu" style="">
-                    <li class="active"><a href="/"><i class="fa fa-circle-o"></i> Dashboard</a></li>
-                </ul>
-            </li>
-            <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-bug"></i> <span>变异测试</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu" style="">
-                    <li><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>
-                </ul>
-            </li>
-            <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-bullseye"></i>
-                    <span>蜕变测试</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>
-                </ul>
-            </li>
-        </ul>
+    <aside class="main-sidebar" th:include="aside::aside ('home', '')">
+
     </aside>
     <section class="content-header">
         <h1>
@@ -114,19 +18,8 @@
         </h1>
     </section>
 </div>
-<!-- jQuery 2.2.3 -->
-<script src="/static/plugins/jQuery/jquery-2.2.3.min.js"></script>
-<!-- Bootstrap 3.3.6 -->
-<script src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
-<!-- AdminLTE-->
-<script src="/static/plugins/adminlte/dist/js/adminlte.min.js"></script>
-<!-- iCheck -->
-<script src="/static/plugins/iCheck/icheck.min.js"></script>
-<!-- toastr -->
-<script src="/static/plugins/toastr/toastr.min.js"></script>
-<!-- basic config -->
-<script src="/static/js/config.js"></script>
+<div th:include="footer::script">
 
-
+</div>
 </body>
 </html>
