不同角色页面

--- a/FacadePlatform/src/main/resources/templates/login.html
+++ b/FacadePlatform/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta th:include="header::header"/>
-    <title>AI测试平台</title>
+    <title>深度学习测试平台</title>
 </head>
 <body class="hold-transition login-page ">
 <div class="login-box">
@@ -32,7 +32,7 @@
                 </div>
                 <!-- /.col -->
                 <div class="col-xs-4">
-                    <button id="submit" type="button" class="btn btn-primary btn-block btn-flat">登陆</button>
+                    <button id="submit" type="button" class="btn btn-primary btn-block btn-flat">登录</button>
                 </div>
                 <!-- /.col -->
             </div>
