--- a/FacadePlatform/src/main/resources/templates/aside.html
+++ b/FacadePlatform/src/main/resources/templates/aside.html
@@ -1,13 +1,13 @@
-<aside class="main-sidebar" th:fragment="aside (level1, level2)" xmlns:th="http://www.thymeleaf.org">
-    <div class="user-panel">
-        <div class="pull-left image">
-            <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-        </div>
-        <div class="pull-left info">
-            <p>Administrator</p>
-        </div>
-    </div>
-    <ul class="sidebar-menu" data-widget="tree">
+<aside class="main-sidebar" th:fragment="aside (level1, level2, user)" xmlns:th="http://www.thymeleaf.org">
+    <!--<div class="user-panel">-->
+        <!--<div class="pull-left image">-->
+            <!--<img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>-->
+        <!--</div>-->
+        <!--<div class="pull-left info">-->
+            <!--<p>Administrator</p>-->
+        <!--</div>-->
+    <!--</div>-->
+    <ul class="sidebar-menu" data-widget="tree" th:if="${user == null or user.roleId == 3}">
         <li class="header">MAIN NAVIGATION</li>
         <li th:classappend="${level1 == 'home' ? 'active' : ''}">
             <a href="/">
@@ -21,27 +21,66 @@
             <!--</ul>-->
         </li>
         <li class="treeview" th:classappend="${level1 == 'mutation' ? 'active' : ''}">
-            <a href="#">
+            <a href="/">
                 <i class="fa fa-bug"></i> <span>变异测试</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+                <!--<span class="pull-right-container">-->
+                    <!--<i class="fa fa-angle-left pull-right"></i>-->
+                <!--</span>-->
             </a>
-            <ul class="treeview-menu" style="">
-                <li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>
-            </ul>
+            <!--<ul class="treeview-menu" style="">-->
+                <!--<li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>-->
+            <!--</ul>-->
         </li>
-        <li class="treeview" th:classappend="${level1 == 'mr' ? 'active' : ''}">
+        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
             <a href="#">
-                <i class="fa fa-bullseye"></i>
-                <span>蜕变测试</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+                <i class="fa fa-bullseye"></i><span>蜕变测试</span>
+                <!--<span class="pull-right-container">-->
+                    <!--<i class="fa fa-angle-left pull-right"></i>-->
+                <!--</span>-->
             </a>
-            <ul class="treeview-menu">
-                <li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>
-            </ul>
+            <!--<ul class="treeview-menu">-->
+                <!--<li th:classappend="${level2 == 'autodrive' ? 'active' : ''}"><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>-->
+            <!--</ul>-->
         </li>
     </ul>
+
+    <ul class="sidebar-menu" data-widget="tree" th:if="${user != null and user.roleId == 2}">
+        <li class="header">MAIN NAVIGATION</li>
+        <li th:classappend="${level1 == 'home' ? 'active' : ''}">
+            <a href="/">
+                <i class="fa fa-dashboard"></i> <span>主页</span>
+                <!--<span class="pull-right-container">-->
+                <!--<i class="fa fa-angle-left pull-right"></i>-->
+                <!--</span>-->
+            </a>
+            <!--<ul class="treeview-menu" style="">-->
+            <!--<li class="active"><a href="/"><i class="fa fa-circle-o"></i> 控制台</a></li>-->
+            <!--</ul>-->
+        </li>
+        <li class="treeview" th:classappend="${level1 == 'mutation' ? 'active' : ''}">
+            <a href="/">
+                <i class="fa fa-bug"></i> <span>变异测试</span>
+                <!--<span class="pull-right-container">-->
+                <!--<i class="fa fa-angle-left pull-right"></i>-->
+                <!--</span>-->
+            </a>
+            <!--<ul class="treeview-menu" style="">-->
+            <!--<li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>-->
+            <!--</ul>-->
+        </li>
+        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
+            <a href="#">
+                <i class="fa fa-bullseye"></i><span>蜕变测试</span>
+                <!--<span class="pull-right-container">-->
+                <!--<i class="fa fa-angle-left pull-right"></i>-->
+                <!--</span>-->
+            </a>
+            <!--<ul class="treeview-menu">-->
+            <!--<li th:classappend="${level2 == 'autodrive' ? 'active' : ''}"><a href="/autodrive"><i class="fa fa-circle-o"></i> 自动驾驶测试</a></li>-->
+            <!--</ul>-->
+        </li>
+    </ul>
+</aside>
+<aside class="main-sidebar" th:fragment="teacher (level1, level2)" xmlns:th="http://www.thymeleaf.org">
+
 </aside>
