--- a/FacadePlatform/src/main/resources/templates/header.html
+++ b/FacadePlatform/src/main/resources/templates/header.html
@@ -34,18 +34,18 @@
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                             <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
-                            <span class="hidden-xs" th:text="${user != null ? user.username : 'Administrator'}"></span>
+                            <span class="hidden-xs" th:text="${user !=null ? user.username : 'Administrator'}"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-header">
                                 <img src="/static/plugins/adminlte/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-                                <p>
+                                <p th:text="${user != null ? user.username : 'Administrator'}">
                                     Administrator
                                 </p>
                             </li>
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">修改信息</a>
+                                    <a href="/account/change-info" class="btn btn-default btn-flat">修改信息</a>
                                 </div>
                                 <div class="pull-right">
                                     <a href="/logout" class="btn btn-default btn-flat">用户登出</a>
