--- a/FacadePlatform/src/main/resources/templates/aside.html
+++ b/FacadePlatform/src/main/resources/templates/aside.html
@@ -20,8 +20,8 @@
                 <!--<li class="active"><a href="/"><i class="fa fa-circle-o"></i> 控制台</a></li>-->
             <!--</ul>-->
         </li>
-        <li class="treeview" th:classappend="${level1 == 'mutation' ? 'active' : ''}">
-            <a href="/">
+        <li th:classappend="${level1 == 'mutation' ? 'active' : ''}">
+            <a href="/mutation/exam">
                 <i class="fa fa-bug"></i> <span>变异测试</span>
                 <!--<span class="pull-right-container">-->
                     <!--<i class="fa fa-angle-left pull-right"></i>-->
@@ -31,7 +31,7 @@
                 <!--<li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>-->
             <!--</ul>-->
         </li>
-        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
+        <li th:classappend="${level1 == 'mr'? 'active' : ''}">
             <a href="#">
                 <i class="fa fa-bullseye"></i><span>蜕变测试</span>
                 <!--<span class="pull-right-container">-->
@@ -57,8 +57,8 @@
             <!--<li class="active"><a href="/"><i class="fa fa-circle-o"></i> 控制台</a></li>-->
             <!--</ul>-->
         </li>
-        <li class="treeview" th:classappend="${level1 == 'mutation' ? 'active' : ''}">
-            <a href="/">
+        <li th:classappend="${level1 == 'mutation' ? 'active' : ''}">
+            <a href="/mutation/exam">
                 <i class="fa fa-bug"></i> <span>变异测试</span>
                 <!--<span class="pull-right-container">-->
                 <!--<i class="fa fa-angle-left pull-right"></i>-->
@@ -68,7 +68,7 @@
             <!--<li th:classappend="${level2 == '' ? 'active' : ''}"><a href="/"><i class="fa fa-circle-o"></i> 变异测试</a></li>-->
             <!--</ul>-->
         </li>
-        <li class="treeview" th:classappend="${level1 == 'mr'? 'active' : ''}">
+        <li th:classappend="${level1 == 'mr'? 'active' : ''}">
             <a href="#">
                 <i class="fa fa-bullseye"></i><span>蜕变测试</span>
                 <!--<span class="pull-right-container">-->
