--- a/FacadePlatform/src/main/resources/templates/mutation/student/exam.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/exam.html
@@ -15,7 +15,7 @@
     </aside>
     <section class="content-header">
         <h1>
-            Dashboard
+            变异测试
         </h1>
     </section>
 </div>
