--- a/FacadePlatform/src/main/resources/templates/footer.html
+++ b/FacadePlatform/src/main/resources/templates/footer.html
@@ -18,6 +18,8 @@
         <script src="/static/plugins/datatables.net/js/dataTables.bootstrap.min.js"></script>
         <!-- toastr -->
         <script src="/static/plugins/toastr/toastr.min.js"></script>
+        <!-- input mask -->
+        <script src="/static/plugins/input-mask/dist/jquery.inputmask.bundle.js"></script>
         <!-- basic config -->
         <script src="/static/js/config.js"></script>
     </div>
