--- a/FacadePlatform/src/main/resources/templates/header.html
+++ b/FacadePlatform/src/main/resources/templates/header.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="/static/plugins/toastr/toastr.min.css"/>
         <!-- select2 -->
         <link rel="stylesheet" href="/static/plugins/select2/select2.min.css"/>
+        <!-- inputmask -->
+        <link rel="stylesheet" href="/static/plugins/input-mask/inputmask.css"/>
         <!-- datatables -->
         <!--<link rel="stylesheet" href="/static/plugins/datatables.net/css/jquery.dataTables.min.css"/>-->
         <link rel="stylesheet" href="/static/plugins/datatables.net/css/dataTables.bootstrap.min.css"/>
