--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
@@ -62,59 +62,54 @@
                             <thead>
                             <tr>
                                 <td>名称</td>
-                                <td>发起者</td>
                                 <td>开始时间</td>
                                 <td>结束时间</td>
-                                <td>状态</td>
+                                <!--<td>状态</td>-->
                                 <td>操作</td>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>深度学习测试1</td>
-                                <td>teacher01</td>
-                                <td>2018-05-01 00:00:00</td>
-                                <td>2018-05-04 00:00:00</td>
-                                <td><span class="label label-info">未开始</span></td>
-                                <td>
-                                    <a href="#">编辑</a>
-                                    <a href="#">删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>深度学习测试2</td>
-                                <td>teacher01</td>
-                                <td>2018-05-01 00:00:00</td>
-                                <td>2018-05-04 00:00:00</td>
-                                <td><span class="label label-success">进行中</span></td>
-                                <td>
-                                    <a href="#">编辑</a>
-                                    <a href="#">删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>深度学习测试3</td>
-                                <td>teacher01</td>
-                                <td>2018-05-01 00:00:00</td>
-                                <td>2018-05-04 00:00:00</td>
-                                <td><span class="label label-success">进行中</span></td>
-                                <td>
-                                    <a href="#">编辑</a>
-                                    <a href="#">删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>深度学习测试4</td>
-                                <td>teacher01</td>
-                                <td>2018-05-01 00:00:00</td>
-                                <td>2018-05-04 00:00:00</td>
-                                <td><span class="label label-danger">已结束</span></td>
-                                <td>
-                                    <a href="#">编辑</a>
-                                    <a href="#">删除</a>
-                                </td>
-                            </tr>
-                            </tbody>
+                            <!--<tbody>-->
+                            <!--<tr>-->
+                                <!--<td>深度学习测试1</td>-->
+                                <!--<td>2018-05-01 00:00:00</td>-->
+                                <!--<td>2018-05-04 00:00:00</td>-->
+                                <!--<td><span class="label label-info">未开始</span></td>-->
+                                <!--<td>-->
+                                    <!--<a href="#">编辑</a>-->
+                                    <!--<a href="#">删除</a>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td>深度学习测试2</td>-->
+                                <!--<td>2018-05-01 00:00:00</td>-->
+                                <!--<td>2018-05-04 00:00:00</td>-->
+                                <!--<td><span class="label label-success">进行中</span></td>-->
+                                <!--<td>-->
+                                    <!--<a href="#">编辑</a>-->
+                                    <!--<a href="#">删除</a>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td>深度学习测试3</td>-->
+                                <!--<td>2018-05-01 00:00:00</td>-->
+                                <!--<td>2018-05-04 00:00:00</td>-->
+                                <!--<td><span class="label label-success">进行中</span></td>-->
+                                <!--<td>-->
+                                    <!--<a href="#">编辑</a>-->
+                                    <!--<a href="#">删除</a>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td>深度学习测试4</td>-->
+                                <!--<td>2018-05-01 00:00:00</td>-->
+                                <!--<td>2018-05-04 00:00:00</td>-->
+                                <!--<td><span class="label label-danger">已结束</span></td>-->
+                                <!--<td>-->
+                                    <!--<a href="#">编辑</a>-->
+                                    <!--<a href="#">删除</a>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--</tbody>-->
                         </table>
                     </div>
                 </div>
