--- a/FacadePlatform/src/main/resources/templates/mutation/student/exam.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/exam.html
@@ -47,7 +47,7 @@
                                     <div class="form-group">
                                         <label for="join_in" class="control-label col-sm-2">我参加的</label>
                                         <div class="col-sm-6" style="padding-top: 5px">
-                                            <input id="join_in" type="checkbox" class="form-control"/>
+                                            <input id="join_in" type="checkbox" name="isMine" class="form-control"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
