修改学生字段

--- a/FacadePlatform/src/main/resources/templates/aside.html
+++ b/FacadePlatform/src/main/resources/templates/aside.html
@@ -21,7 +21,7 @@
             <!--</ul>-->
         </li>
         <li th:classappend="${level1 == 'mutation' ? 'active' : ''}">
-            <a href="/mutation/exam">
+            <a href="/mutation/t/exam">
                 <i class="fa fa-bug"></i> <span>变异测试</span>
                 <!--<span class="pull-right-container">-->
                     <!--<i class="fa fa-angle-left pull-right"></i>-->
@@ -32,7 +32,7 @@
             <!--</ul>-->
         </li>
         <li th:classappend="${level1 == 'mr'? 'active' : ''}">
-            <a href="#">
+            <a href="/mr">
                 <i class="fa fa-bullseye"></i><span>蜕变测试</span>
                 <!--<span class="pull-right-container">-->
                     <!--<i class="fa fa-angle-left pull-right"></i>-->
@@ -58,7 +58,7 @@
             <!--</ul>-->
         </li>
         <li th:classappend="${level1 == 'mutation' ? 'active' : ''}">
-            <a href="/mutation/exam">
+            <a href="/mutation/s/exam">
                 <i class="fa fa-bug"></i> <span>变异测试</span>
                 <!--<span class="pull-right-container">-->
                 <!--<i class="fa fa-angle-left pull-right"></i>-->
