--- a/FacadePlatform/src/main/resources/templates/mutation/student/join.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <link rel="stylesheet" href="/static/plugins/daterangepicker/daterangepicker.css"/>
     <meta th:include="header::header"/>
@@ -15,8 +15,8 @@
 
     </aside>
     <section class="content-header">
-        <h1 th:text="${exam == null ? '新增考试' : '修改考试'}">
-
+        <h1>
+            参加考试
         </h1>
     </section>
     <section class="content">
@@ -24,10 +24,10 @@
             <div class="col-sm-12">
                 <div class="box">
                     <div class="box-header with-border">
-                        <h3 class="box-title" th:text="${exam == null ? '创建' : '修改'}"></h3>
+                        <h3 class="box-title">考试信息</h3>
                         <div class="box-tools">
                             <div class="btn-group pull-right">
-                                <a href="/mutation/t/exam" class="btn btn-sm btn-default">
+                                <a href="/mutation/exam" class="btn btn-sm btn-default">
                                     <i class="fa fa-arrow-left"></i>
                                     &nbsp;返回
                                 </a>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="box-body">
-                        <form id="exam_form" class="form-horizontal">
+                        <div class="form-horizontal">
                             <input type="hidden" id="id" name="id" th:value="${exam == null ? '' : exam.id}"/>
                             <div class="form-group">
                                 <label for="name" class="control-label col-sm-2">名称</label>
@@ -45,20 +45,22 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-sm-2">时间范围</label>
+                                <label class="control-label col-sm-2">开始时间</label>
                                 <div class="col-sm-9">
-                                    <input id="startTime" type="hidden" name="startTime" th:value="${exam == null ? '' : exam.startTime}"/>
-                                    <input id="endTime" type="hidden" name="endTime" th:value="${exam == null ? '' : exam.endTime}"/>
-                                    <input id="timeRange" name="timeRange" type="text" class="form-control"
-                                           placeholder="时间范围"/>
+                                    <label id="startTime" class="form-control" th:text="${exam == null ? '' : exam.startTime}"></label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2">结束时间</label>
+                                <div class="col-sm-9">
+                                    <label id="endTime" class="form-control" th:text="${exam == null ? '' : exam.endTime}"></label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="control-label col-sm-2">迭代次数</label>
                                 <div class="col-sm-9">
-                                    <input id="maxIters" class="form-control"
-                                           placeholder="迭代次数"
-                                           th:value="${exam == null ? '' : exam.maxIters}"/>
+                                    <label id="maxIters" class="form-control"
+                                           th:text="${exam == null ? '' : exam.maxIters}"></label>
                                     <span class="help-block">
                                         <i class="fa fa-info-circle">
                                              0表示不限制。
@@ -69,9 +71,8 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-2">样本的数量限制</label>
                                 <div class="col-sm-9">
-                                    <input id="maxItems" class="form-control"
-                                           placeholder="样本的数量限制"
-                                           th:value="${exam == null ? '' : exam.maxItems}"/>
+                                    <label id="maxItems" class="form-control"
+                                           th:text="${exam == null ? '' : exam.maxItems}"></label>
                                     <span class="help-block">
                                         <i class="fa fa-info-circle">
                                              0表示不限制。
@@ -82,29 +83,23 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-2">变异体数量</label>
                                 <div class="col-sm-9">
-                                    <input id="modelNums" class="form-control"
-                                           placeholder="变异体数量"
-                                           th:value="${exam == null ? '' : exam.modelNums}"/>
+                                    <label id="modelNums" class="form-control"
+                                           th:text="${exam == null ? '' : exam.modelNums}"></label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="control-label col-sm-2">题库集合</label>
                                 <div class="col-sm-9">
-                                    <select id="bankIds" class="form-control select2-basic" multiple="multiple">
-                                        <option th:each="bank: ${banks}"
-                                                th:value="${bank.id}"
-                                                th:text="${bank.name}"></option>
-                                    </select>
+
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="control-label col-sm-2"></label>
                                 <div class="col-sm-9">
-                                    <button id="exam_submit" class="btn btn-info btn-sm" type="button">提交</button>
-                                    <button class="btn btn-default btn-sm" type="reset" style="margin-left: 5px">重置</button>
+                                    <button id="join_exam" class="btn btn-info btn-sm" type="button">开始答题</button>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -114,8 +109,8 @@
 <div th:include="footer::script">
 
 </div>
-<script src="/static/plugins/daterangepicker/moment.min.js"></script>
-<script src="/static/plugins/daterangepicker/daterangepicker.js"></script>
-<script src="/static/js/mutation/teacher/exam-edit.js"></script>
+<!--<script src="/static/plugins/daterangepicker/moment.min.js"></script>-->
+<!--<script src="/static/plugins/daterangepicker/daterangepicker.js"></script>-->
+<!--<script src="/static/js/mutation/teacher/exam-edit.js"></script>-->
 </body>
 </html>
