--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/exam.html
@@ -10,7 +10,7 @@
 </header>
 <div class="content-wrapper" style="min-height: 976px">
     <aside class="main-sidebar"
-           th:include="aside::aside ('mutation', '', ${user})">
+           th:include="aside::aside ('mutation', 'exam', ${user})">
 
     </aside>
     <section class="content-header">
