--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/bank.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/bank.html
@@ -10,60 +10,38 @@
 </header>
 <div class="content-wrapper" style="min-height: 976px">
     <aside class="main-sidebar"
-           th:include="aside::aside ('mutation', '', ${user})">
+           th:include="aside::aside ('mutation', 'bank', ${user})">
 
     </aside>
     <section class="content-header">
         <h1>
-            新增题库
+            题库
         </h1>
     </section>
     <section class="content">
         <div class="row">
             <div class="col-sm-12">
                 <div class="box">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">创建</h3>
-                        <div class="box-tools">
-                            <div class="btn-group pull-right">
-                                <a href="/mutation/exam" class="btn btn-sm btn-default">
-                                    <i class="fa fa-arrow-left"></i>
-                                    &nbsp;返回
-                                </a>
+                    <div class="box-header">
+                        <div class="col-sm-8">
+                            <div class="form-horizontal">
+                                <a id="create_button" href="/mutation/exam/new" class="btn btn-success btn-sm" style="margin-left: 5px">新增题库</a>
                             </div>
                         </div>
                     </div>
                     <div class="box-body">
-                        <form id="bank_form" class="form-horizontal">
-                            <div class="form-group">
-                                <label for="name" class="control-label col-sm-2">题库名称</label>
-                                <div class="col-sm-9">
-                                    <input id="name" name="name" type="text" class="form-control"
-                                        placeholder="题库名称"/>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="description" class="control-label col-sm-2">题库描述</label>
-                                <div class="col-sm-9">
-                                    <input id="description" name="description" type="text" class="form-control"
-                                           placeholder="题库描述"/>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="model" class="control-label col-sm-2">上传模型</label>
-                                <div class="col-sm-9">
-                                    <input id="model" name="model" type="file" style="display: none"/>
-                                    <input id="model_facade" type="text" class="form-control" placeholder="选择文件"/>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label col-sm-2"></label>
-                                <div class="col-sm-9">
-                                    <button id="bank_submit" class="btn btn-info btn-sm" type="button">提交</button>
-                                    <button class="btn btn-default btn-sm" type="reset" style="margin-left: 5px">重置</button>
-                                </div>
-                            </div>
-                        </form>
+                        <table id="bank_table" class="table table-bordered table-hover dataTable"
+                               cellspacing="0" width="100%">
+                            <thead>
+                            <tr>
+                                <td>ID</td>
+                                <td>名称</td>
+                                <td>变异体数量</td>
+                                <td>创建时间</td>
+                                <td>操作</td>
+                            </tr>
+                            </thead>
+                        </table>
                     </div>
                 </div>
             </div>
