--- a/FacadePlatform/src/main/resources/templates/mutation/teacher/bank.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/teacher/bank.html
@@ -25,7 +25,7 @@
                     <div class="box-header">
                         <div class="col-sm-8">
                             <div class="form-horizontal">
-                                <a id="create_button" href="/mutation/exam/new" class="btn btn-success btn-sm" style="margin-left: 5px">新增题库</a>
+                                <a id="create_button" href="/mutation/bank/new" class="btn btn-success btn-sm" style="margin-left: 5px">新增题库</a>
                             </div>
                         </div>
                     </div>
